--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Marc Cull <marc.cull@gmail.com>",
   "dependencies": {
+    "dotenv": "^6.1.0",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.15",
     "gatsby-plugin-manifest": "^2.0.05",
@@ -15,7 +16,8 @@
     "gatsby-transformer-sharp": "^2.1.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "stripe": "^6.15.1"
   },
   "keywords": [
     "gatsby"
@@ -29,6 +31,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "netlify-lambda": "^1.0.3",
     "prettier": "^1.14.2"
   },
   "repository": {
