--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Marc Cull <marc.cull@gmail.com>",
   "dependencies": {
+    "aphrodite": "^2.2.3",
     "dotenv": "^6.1.0",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.15",
@@ -17,6 +18,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "reactstrap": "^6.5.0",
     "stripe": "^6.15.1"
   },
   "keywords": [
