--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^6.1.0",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.15",
+    "gatsby-plugin-aphrodite": "^2.0.5",
     "gatsby-plugin-manifest": "^2.0.05",
     "gatsby-plugin-offline": "^2.0.11",
     "gatsby-plugin-react-helmet": "^3.0.0",
